--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.2.0",
     "@capawesome/capacitor-file-picker": "7.1.0",
-    "@ionic/angular": "8.5.7",
-    "@ionic/core": "8.5.7",
+    "@ionic/angular": "8.6.0",
+    "@ionic/core": "8.6.0",
     "@maskito/angular": "3.8.0",
     "@maskito/core": "3.8.0",
+    "@module-federation/enhanced": "^0.9.1",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "16.0.1",
     "@ngxs/form-plugin": "19.0.0",
@@ -33,11 +34,10 @@
     "@nx/angular": "21.1.2",
     "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
-    "ionicons": "^8.0.8",
+    "ionicons": "8.0.9",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.2",
-    "storybook": "^8.6.14",
     "swiper": "^11.2.8",
     "tslib": "^2.8.1",
     "zone.js": "0.15.0"
@@ -54,7 +54,6 @@
     "@angular/language-service": "19.2.12",
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
-    "@compodoc/compodoc": "^1.1.26",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.27.0",
     "@ngxs/devtools-plugin": "19.0.0",
@@ -67,20 +66,14 @@
     "@nx/web": "21.1.2",
     "@nx/workspace": "21.1.2",
     "@schematics/angular": "19.2.13",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/angular": "8.6.14",
-    "@storybook/core-server": "8.6.14",
-    "@storybook/test": "8.6.14",
-    "@storybook/test-runner": "0.22.0",
-    "@stylistic/eslint-plugin": "^4.4.0",
+    "@stylistic/eslint-plugin": "^4.4.1",
     "@swc-node/register": "1.10.10",
     "@swc/core": "1.11.29",
     "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.21",
     "@typescript-eslint/utils": "8.32.1",
-    "angular-eslint": "^19.6.0",
+    "angular-eslint": "^19.7.1",
     "autoprefixer": "^10.4.21",
     "cypress": "14.4.0",
     "eslint": "9.27.0",
@@ -100,7 +93,7 @@
     "ts-jest": "29.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "^8.33.0",
+    "typescript-eslint": "^8.33.1",
     "verdaccio": "^6.1.2"
   },
   "nx": {
