--- a/libs/storage/tsconfig.lib.json
+++ b/libs/storage/tsconfig.lib.json
@@ -5,12 +5,13 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "moduleResolution": "bundler"
   },
   "exclude": [
     "src/**/*.spec.ts",
     "src/test-setup.ts",
-    "jest.config.ts", 
+    "jest.config.ts",
     "src/**/*.test.ts"
   ],
   "include": ["src/**/*.ts"]
