--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "@angular-ru/cdk": "18.11.0",
     "@angular-ru/ngxs": "18.11.0",
-    "@angular/animations": "19.2.12",
-    "@angular/cdk": "19.2.17",
-    "@angular/common": "19.2.12",
-    "@angular/compiler": "19.2.12",
-    "@angular/core": "19.2.12",
-    "@angular/forms": "19.2.12",
-    "@angular/platform-browser": "19.2.12",
-    "@angular/platform-browser-dynamic": "19.2.12",
-    "@angular/router": "19.2.12",
+    "@angular/animations": "20.0.3",
+    "@angular/cdk": "20.0.3",
+    "@angular/common": "20.0.3",
+    "@angular/compiler": "20.0.3",
+    "@angular/core": "20.0.3",
+    "@angular/forms": "20.0.3",
+    "@angular/platform-browser": "20.0.3",
+    "@angular/platform-browser-dynamic": "20.0.3",
+    "@angular/router": "20.0.3",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.2.0",
     "@capawesome/capacitor-file-picker": "7.1.0",
@@ -31,10 +31,9 @@
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
     "@nrwl/nx-cloud": "19.1.0",
-    "@nx/angular": "21.1.2",
+    "@nx/angular": "21.2.0",
     "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
-    "eslint-plugin-storybook": "^9.0.4",
     "ionicons": "8.0.9",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
@@ -44,31 +43,32 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.13",
-    "@angular-devkit/core": "19.2.13",
-    "@angular-devkit/schematics": "19.2.13",
-    "@angular-eslint/eslint-plugin": "19.4.0",
-    "@angular-eslint/eslint-plugin-template": "19.4.0",
-    "@angular-eslint/template-parser": "19.4.0",
-    "@angular/cli": "19.2.13",
-    "@angular/compiler-cli": "19.2.12",
-    "@angular/language-service": "19.2.12",
+    "@angular-devkit/build-angular": "20.0.2",
+    "@angular-devkit/core": "20.0.2",
+    "@angular-devkit/schematics": "20.0.2",
+    "@angular-eslint/eslint-plugin": "20.0.0",
+    "@angular-eslint/eslint-plugin-template": "20.0.0",
+    "@angular-eslint/template-parser": "20.0.0",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "20.0.3",
+    "@angular/language-service": "20.0.3",
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.27.0",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "21.1.2",
-    "@nx/eslint": "21.1.2",
-    "@nx/eslint-plugin": "21.1.2",
-    "@nx/jest": "21.1.2",
-    "@nx/js": "21.1.2",
-    "@nx/storybook": "21.1.2",
-    "@nx/web": "21.1.2",
-    "@nx/workspace": "21.1.2",
-    "@schematics/angular": "19.2.13",
-    "@storybook/addon-docs": "^8.6.14",
-    "@storybook/angular": "8.6.14",
+    "@nx/cypress": "21.2.0",
+    "@nx/eslint": "21.2.0",
+    "@nx/eslint-plugin": "21.2.0",
+    "@nx/jest": "21.2.0",
+    "@nx/js": "21.2.0",
+    "@nx/storybook": "21.2.0",
+    "@nx/web": "21.2.0",
+    "@nx/workspace": "21.2.0",
+    "@schematics/angular": "20.0.2",
+    "@storybook/addon-docs": "^9.0.10",
+    "@storybook/angular": "9.0.9",
+    "@storybook/core-server": "8.6.14",
     "@storybook/test-runner": "^0.22.0",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@swc-node/register": "1.10.10",
@@ -76,25 +76,26 @@
     "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.21",
-    "@typescript-eslint/utils": "8.32.1",
-    "angular-eslint": "^19.7.1",
+    "@typescript-eslint/utils": "^8.33.1",
+    "angular-eslint": "20.0.0",
     "autoprefixer": "^10.4.21",
     "cypress": "14.4.0",
-    "eslint": "9.27.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-cypress": "4.3.0",
+    "eslint-plugin-storybook": "9.0.9",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.5.5",
+    "jest-preset-angular": "14.6.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "ng-packagr": "19.2.2",
-    "nx": "21.1.2",
+    "ng-packagr": "20.0.0",
+    "nx": "21.2.0",
     "postcss": "^8.5.4",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.6",
     "postcss-url": "~10.1.3",
     "prettier": "^3.5.3",
-    "storybook": "8.6.14",
+    "storybook": "9.0.9",
     "ts-jest": "29.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
