--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "@angular-ru/cdk": "18.11.0",
     "@angular-ru/ngxs": "18.11.0",
-    "@angular/animations": "20.0.5",
+    "@angular/animations": "20.0.6",
     "@angular/cdk": "20.0.4",
-    "@angular/common": "20.0.5",
-    "@angular/compiler": "20.0.5",
-    "@angular/core": "20.0.5",
-    "@angular/forms": "20.0.5",
-    "@angular/platform-browser": "20.0.5",
-    "@angular/platform-browser-dynamic": "20.0.5",
-    "@angular/router": "20.0.5",
+    "@angular/common": "20.0.6",
+    "@angular/compiler": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/platform-browser": "20.0.6",
+    "@angular/platform-browser-dynamic": "20.0.6",
+    "@angular/router": "20.0.6",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.4.0",
     "@capawesome/capacitor-file-picker": "7.2.0",
@@ -23,6 +23,7 @@
     "@ionic/core": "8.6.2",
     "@maskito/angular": "3.9.1",
     "@maskito/core": "3.9.1",
+    "@module-federation/enhanced": "^0.9.1",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "16.0.1",
     "@ngxs/form-plugin": "20.0.2",
@@ -34,6 +35,7 @@
     "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
     "ionicons": "8.0.9",
+    "less": "^4.3.0",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.2",
@@ -49,11 +51,11 @@
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
     "@angular/cli": "~20.0.4",
-    "@angular/compiler-cli": "20.0.5",
-    "@angular/language-service": "20.0.5",
+    "@angular/compiler-cli": "20.0.6",
+    "@angular/language-service": "20.0.6",
     "@capacitor/cli": "7.4.0",
     "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.30.0",
+    "@eslint/js": "9.30.1",
     "@ngxs/devtools-plugin": "20.0.2",
     "@nx/cypress": "21.2.1",
     "@nx/eslint": "21.2.1",
@@ -71,7 +73,7 @@
     "@swc/core": "1.12.9",
     "@swc/helpers": "0.5.17",
     "@types/jest": "30.0.0",
-    "@types/node": "24.0.8",
+    "@types/node": "24.0.9",
     "@typescript-eslint/utils": "^8.35.1",
     "angular-eslint": "20.1.1",
     "autoprefixer": "^10.4.21",
@@ -80,8 +82,8 @@
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-cypress": "5.1.0",
     "eslint-plugin-storybook": "9.0.15",
-    "jest": "30.0.3",
-    "jest-environment-jsdom": "30.0.2",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.6.0",
     "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "20.0.1",
