--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.2",
+    "signalstory": "^19.0.0",
     "swiper": "^11.2.10",
     "tslib": "^2.8.1",
     "zone.js": "0.15.1"
